--- a/home.css
+++ b/home.css
@@ -33,6 +33,72 @@ nav ul li {
     margin-right: 20px;
 }
 
+.nav_bars-btn{
+    width: 28px;
+    height: 28px;
+    color: white;
+    margin-left: 10px;
+    position: absolute;
+    right: 5px;
+    margin-right: 10px;
+    display:none
+}
+
+.nav_overlay{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.nav_mobile{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 200px;
+    max-width: 100%;
+    background-color: #fff;
+    display: grid !important;
+    transform: translateX(100%);
+    transition: transform linear 0.2s;
+}
+
+.nav_mobile-close{
+    width: 20px;
+    height: 20px;
+    color: #666;
+    position: absolute;
+    top: 1rem;
+
+}
+
+.nav_mobile-list{
+    margin-top: 24px;
+    font-size: 1.4rem;
+    display: contents;
+}
+
+.nav-input:checked~ .nav_overlay{
+    display: block;
+}
+
+.nav-input:checked~ .nav_mobile{
+    transform: translateX(0%);
+}
+
+@media (max-width: 1023px){
+    .nav_bars-btn{
+       display: block; 
+    }
+    .nav_pc{
+       display: none; 
+    }
+}
+
 a {
     text-decoration: none;
     color: #555;
@@ -117,7 +183,6 @@ a {
 
 #build-route {
     position: relative;
-    background: url(image/bg-route-build.jpg);
     background-repeat: no-repeat;
     background-size: cover
 }
@@ -129,7 +194,6 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .2)
 }
 
 .ct-build-route {
@@ -139,7 +203,6 @@ a {
 
 .ct-build-route .img-route {
     width: 524px;
-    background-color: rgba(255, 255, 255, .2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,7 +229,7 @@ a {
     font-weight: 600;
     margin-bottom: 35px;
     position: relative;
-    color: #fff;
+    color: black;
     line-height: 41px;
     letter-spacing: .4px
 }
@@ -184,7 +247,7 @@ a {
 
 .ct-build-route .text-ct .intro-ct {
     font-size: 15px;
-    color: #fff
+    color: black
 }
 
 .ct-build-route .text-ct .title span {
@@ -304,15 +367,11 @@ h4 {
     filter: grayscale(0);
 }
 
-.btn {
-    text-decoration: none;
-    width: 150px;
-    background-color: #f172dc;
-    border: none;
-    outline: none;
-    height: 49px;
-    border-radius: 49px;
-}
-#user{
-    color: violet !important;
+.btn1 {
+    display: inline-block;
+    background: #ff523b;
+    color: #fff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
 }
