--- a/home.css
+++ b/home.css
@@ -72,7 +72,6 @@ nav ul li {
     height: 20px;
     color: #666;
     position: absolute;
-    top: 1rem;
 
 }
 
@@ -368,10 +367,30 @@ h4 {
 }
 
 .btn1 {
-    display: inline-block;
+    display:inline-flex;
     background: #ff523b;
     color: #fff;
-    padding: 8px 30px;
+    padding: 8px 10px;
     margin: 30px 0;
     border-radius: 30px;
+}
+
+@media only screen and (max-width: 681px) {
+    .text-ct,
+    .img-route {
+        float: none;
+        width: 100%;
+    }
+
+    .img-route {
+        margin-right: 0;
+    }
+    .ct-build-route .text-ct {
+        flex: 1;
+        position: relative;
+        left: 0px;
+        padding-top: 50px;
+        text-align: center;
+        margin: auto ;
+    }
 }
